--- a/index.html
+++ b/index.html
@@ -40,20 +40,10 @@
 	</div>
 </td>
 <td class="navigation">
-	<div class="dropdown">
-	<button class="dropbtn">Registration</button>
-	<div class="dropdown-content">
-	<a href="index.html">Opens December 01, 2023</a>
-	</div>
-	</div>
+	<a href="Content/registration.html" title="Opens December 01, 2023">Registration</a>
 </td>
 <td class="navigation">
-	<div class="dropdown">
-	<button class="dropbtn">Abstract<br>submission</button>
-	<div class="dropdown-content">
-	<a href="index.html">Opens December 01, 2023</a>
-	</div>
-	</div>
+	<a href="Content/abstract-submission.html" title="Opens December 01, 2023">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
