--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <table class="navigation">
 <tr>
 <td class="navigation">
-	<a href="index.html">Home</a>
+	<a href="index.html" class="current">Home</a>
 </td>
 <td class="navigation">
 	<a href="Content/keydates.html">Key<br>Dates</a>
@@ -40,10 +40,10 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration.html" title="Opens December 01, 2023">Registration</a>
+	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
-	<a href="Content/abstract-submission.html" title="Opens December 01, 2023">Abstract<br>submission</a>
+	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
