--- a/Content/abstract-submission.html
+++ b/Content/abstract-submission.html
@@ -28,14 +28,11 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">The<br>Venue</button>
+	<button class="dropbtn">Scientific</button>
 	<div class="dropdown-content">
-	<a href="Content/Venue/travel.html">Travel</a>
-	<a href="Content/Venue/accommodation.html">Accomodation</a>
-	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
-	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
-	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
-	<a href="Content/Venue/restaurants.html">About food</a>
+	<a href="Content/Scientific/program.html">Program</a>
+	<a href="Content/Scientific/participants.html">Participants</a>
+	<a href="Content/Scientific/talks.html">Talks</a>
 	</div>
 	</div>
 </td>
@@ -47,11 +44,14 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Scientific</button>
+	<button class="dropbtn">Venue</button>
 	<div class="dropdown-content">
-	<a href="Content/Scientific/program.html">Program</a>
-	<a href="Content/Scientific/participants.html">Participants</a>
-	<a href="Content/Scientific/talks.html">Talks</a>
+	<a href="Content/Venue/travel.html">Travel</a>
+	<a href="Content/Venue/accommodation.html">Accomodation</a>
+	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
+	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
+	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
 </td>
@@ -66,6 +66,28 @@
 <!---   TEXTBODY   --------------------------->
 
 <h3>Abstract submission will be open from December 1, 2023 until June 30, 2024</h3>
+
+<br><br>
+<p> VERSION FOR TESTING </p>
+<br><br>
+
+<h1>Abstract Submission</h1>
+The deadline for submitting the abstract is <span style="color:green">June 30, 2024</span>. 
+<br><br>
+To submit your abstract please proceed as follows:
+<ul>
+<li>Download the LaTeX-template <a href="Downloads/TemplateAbstract.tex" target="_blank">TemplateAbstract.tex</a>
+	and <span style="color:green">use this file</span> to write your abstract.</li>
+<li>Please <span style="color:green">do not</span> insert additional user-defined commands or load additional packages.</li>
+<li>Make sure that your abstract compiles with <span style="color:green">pdflatex</span> without errors.</li>
+<li>Before upload, please rename your file as <span style="color:green">YourName.tex</span>.
+</ul>
+Did you follow the above four steps ? <div class="click">Click here to confirm.</div>
+<div class="showup">
+    <input id="Button" type="button" value="Upload file" style="background-color:#f5f5f5" />
+</div>
+
+<script src="Script/abstract-submission.js"></script>
 
 </body>
 </html>
