--- a/Content/registration.html
+++ b/Content/registration.html
@@ -28,14 +28,11 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">The<br>Venue</button>
+	<button class="dropbtn">Scientific</button>
 	<div class="dropdown-content">
-	<a href="Content/Venue/travel.html">Travel</a>
-	<a href="Content/Venue/accommodation.html">Accomodation</a>
-	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
-	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
-	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
-	<a href="Content/Venue/restaurants.html">About food</a>
+	<a href="Content/Scientific/program.html">Program</a>
+	<a href="Content/Scientific/participants.html">Participants</a>
+	<a href="Content/Scientific/talks.html">Talks</a>
 	</div>
 	</div>
 </td>
@@ -47,11 +44,14 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Scientific</button>
+	<button class="dropbtn">Venue</button>
 	<div class="dropdown-content">
-	<a href="Content/Scientific/program.html">Program</a>
-	<a href="Content/Scientific/participants.html">Participants</a>
-	<a href="Content/Scientific/talks.html">Talks</a>
+	<a href="Content/Venue/travel.html">Travel</a>
+	<a href="Content/Venue/accommodation.html">Accomodation</a>
+	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
+	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
+	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
 </td>
@@ -66,6 +66,62 @@
 <!---   TEXTBODY   --------------------------->
 
 <h3>Registration will be open from December 1, 2023 until June 9, 2024</h3>
+
+<br><br>
+<p> VERSION FOR TESTING </p>
+<br><br>
+
+<h1>Registration</h1>
+To register for the conference, please fill and submit the registration form and pay the conference fee. 
+
+<h3>Conference fee</h3>
+The conference fee is 
+<p>
+	Euro 200 
+</p>
+and should be paid by bank transfer to 
+<p>
+	ACCOUNT XXX
+</p>
+The deadline for payment is <span style="color:green">June 9, 2024</span>. 
+<br><br>
+The fee covers conference material, coffee breaks, and the conference dinner.
+
+<h3>Registration form</h3>
+The deadline for registration is <span style="color:green">June 9, 2024</span>. 
+<br><br>
+Guess what: in the registration form linked below your personal data is collected for the purposes of processing your
+registration and for organisational matters of the conference. By filling and submitting the form you agree with that.
+
+<p>
+<a href="https://docs.google.com/forms/d/1tzBqvNIr7FCyvo23vZUR2OAj_CqaXlTblZU9tj3dfiI/edit" target="_blank">
+	Go to form</a>
+</p>
+
+<!--
+<form action="https://docs.google.com/forms/d/e/1FAIpQLSer7vcPBAP1jPfeGOrGz0sdTMBcC_Volxhnoxx18p7BJBWKMg/formResponse" method="post">
+	<label style="padding-right:20px">Last Name:</label>
+	<input type="text" placeholder="______" name="entry.1279201448" style="background-color:#e3e3e3" required>
+	<br><br>
+	<label style="padding-right:20px">First Name:</label>
+	<input type="text" placeholder="______" name="entry.1986506563" style="background-color:#e3e3e3" required>
+	<br><br>
+	<label style="padding-right:20px">Affiliation:</label>
+	<input type="text" placeholder="______" name="entry.1589467449" style="background-color:#e3e3e3" required>
+	<br><br>
+	<label style="padding-right:20px">Email Address:</label>
+	<input type="email" placeholder="______" name="emailAddress" style="background-color:#e3e3e3" required>
+	<br><br>
+	<label style="padding-right:20px">Do you intend to give a talk?</label>
+	<input type="radio" name="" > Yes</input>
+	<input type="radio" name="" > No</input>
+	<br><br>
+	<label style="color:#b8860b; padding-right:20px">Please review your data and check box to confirm:</label>
+	<input type="checkbox" name="" style="background-color:#e3e3e3">
+	<br><br>
+	<button type="submit" style="background-color:#f5f5f5"><b>Submit</b></button>
+</form>
+-->
 
 </body>
 </html>
