--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">The<br>Venue</button>
+	<button class="dropbtn">Scientific</button>
 	<div class="dropdown-content">
-	<a href="Content/Venue/travel.html">Travel</a>
-	<a href="Content/Venue/accommodation.html">Accomodation</a>
-	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
-	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
-	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
-	<a href="Content/Venue/restaurants.html">About food</a>
+	<a href="Content/Scientific/program.html">Program</a>
+	<a href="Content/Scientific/participants.html">Participants</a>
+	<a href="Content/Scientific/talks.html">Talks</a>
 	</div>
 	</div>
 </td>
@@ -47,11 +44,14 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Scientific</button>
+	<button class="dropbtn">Venue</button>
 	<div class="dropdown-content">
-	<a href="Content/Scientific/program.html">Program</a>
-	<a href="Content/Scientific/participants.html">Participants</a>
-	<a href="Content/Scientific/talks.html">Talks</a>
+	<a href="Content/Venue/travel.html">Travel</a>
+	<a href="Content/Venue/accommodation.html">Accomodation</a>
+	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
+	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
+	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
 </td>
@@ -65,11 +65,53 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h2>What is This Website?</h2>
-    <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p>
+<h3>Welcome !</h3>
+
+This conference aims to bring together mathematicians working on spectral theory, complex analysis, approximation theory and 
+related areas, and provide a framework for scientific exchange.
+<p>
+Registration (deadline June 9, 2024) and submission of abstracts (deadline June 30, 2024) should be done through this website. 
+The registration fee is &euro; 200. Payment should be done by bank transfer (deadline June 9, 2024). 
+The fee covers conference material, coffee breaks, and the conference dinner.
+</p>
+Our funding is not yet settled. It might be that we can offer limited support for colleagues who could not attend otherwise.
+<br><br>
+The conference program consists of invited talks (60 min + discussion) and contributed talks (30 min + discussion).
+<br>
+Confirmed plenary speakers are:
+<p>
+	Sergey Denisov
+	<br>
+	Pavel Exner
+	<br>
+	Arno Kuijlaars
+	<br>
+	Matthias Langer
+	<br>
+	Ari Laptev
+	<br>
+	Marius Lemm
+	<br>
+	Mikhail Sodin
+	<br>
+	Christiane Tretter
+	<br>
+	Peter Yuditskii
+</p>
+For further information, please check the links on this website. 
+If you have special requests which are not answered by the information on this site, please use the conference 
+email address 
+<p>
+<em>ota2024(at)tuwien.ac.at</em>. 
+</p>
+Looking forward to seeing you in Vienna!
+<br><br>
+With best regards, the organisers
+<br><br>
+Benjamin Eichinger
+<br>
+Harald Woracek
+
 
 <!---   PAGE FOOT   --------------------------->
 
