--- a/Content/keydates.html
+++ b/Content/keydates.html
@@ -28,14 +28,11 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">The<br>Venue</button>
+	<button class="dropbtn">Scientific</button>
 	<div class="dropdown-content">
-	<a href="Content/Venue/travel.html">Travel</a>
-	<a href="Content/Venue/accommodation.html">Accomodation</a>
-	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
-	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
-	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
-	<a href="Content/Venue/restaurants.html">About food</a>
+	<a href="Content/Scientific/program.html">Program</a>
+	<a href="Content/Scientific/participants.html">Participants</a>
+	<a href="Content/Scientific/talks.html">Talks</a>
 	</div>
 	</div>
 </td>
@@ -47,11 +44,14 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Scientific</button>
+	<button class="dropbtn">Venue</button>
 	<div class="dropdown-content">
-	<a href="Content/Scientific/program.html">Program</a>
-	<a href="Content/Scientific/participants.html">Participants</a>
-	<a href="Content/Scientific/talks.html">Talks</a>
+	<a href="Content/Venue/travel.html">Travel</a>
+	<a href="Content/Venue/accommodation.html">Accomodation</a>
+	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
+	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
+	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
 </td>
@@ -65,10 +65,10 @@
 
 <!---   TEXTBODY   -------------------------->
 
-<h3>December 1, 2023: Registration and abstract submission opens</h3>
-<h3>June 9, 2024: Registration closes / Conference fee must be paid</h3>
-<h3>June 30, 2024: Abstract submission closes</h3>
-<h3>July 8--12, 2024: Conference</h3>
+<h3>&rtri; December 1, 2023: Registration and abstract submission opens</h3>
+<h3>&rtri;&rtri; June 9, 2024: Registration closes / Conference fee must be paid</h3>
+<h3>&rtri;&rtri; June 30, 2024: Abstract submission closes</h3>
+<h3>&rtri;&rtri;&rtri; July 8--12, 2024: Conference</h3>
 
 </body>
 </html>
