--- a/Content/registration.html
+++ b/Content/registration.html
@@ -65,7 +65,7 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Registration will be open from December 1, 2023 until June 9, 2024</h3>
+<h3>Registration will be open from December 1, 2023 until June 2, 2024</h3>
 
 <br><br>
 <p> VERSION FOR TESTING </p>
@@ -75,27 +75,25 @@
 To register for the conference, please fill and submit the registration form and pay the conference fee. 
 
 <h3>Conference fee</h3>
-The conference fee is 
-<p>
-	Euro 200 
-</p>
-and should be paid by bank transfer to 
+The conference fee is &euro; 200. This includes conference material, coffee breaks, and the conference dinner. 
+If you plan to not attend the dinner, the fee reduces to &euro; 130. 
+<br><br>
+The fee should be paid by bank transfer to 
 <p>
 	ACCOUNT XXX
 </p>
-The deadline for payment is <span style="color:green">June 9, 2024</span>. 
-<br><br>
-The fee covers conference material, coffee breaks, and the conference dinner.
+The deadline for payment is <span style="color:green">June 2, 2024</span>. 
 
 <h3>Registration form</h3>
-The deadline for registration is <span style="color:green">June 9, 2024</span>. 
+The deadline for registration is <span style="color:green">June 2, 2024</span>. 
 <br><br>
 Guess what: in the registration form linked below your personal data is collected for the purposes of processing your
 registration and for organisational matters of the conference. By filling and submitting the form you agree with that.
 
 <p>
-<a href="https://docs.google.com/forms/d/1tzBqvNIr7FCyvo23vZUR2OAj_CqaXlTblZU9tj3dfiI/edit" target="_blank">
-	Go to form</a>
+Click 
+<a href="https://docs.google.com/forms/d/1tzBqvNIr7FCyvo23vZUR2OAj_CqaXlTblZU9tj3dfiI/edit" target="_blank">here</a>
+to agree and proceed to the form.
 </p>
 
 <!--
