--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 This conference aims to bring together mathematicians working on spectral theory, complex analysis, approximation theory and 
 related areas, and provide a framework for scientific exchange.
 <p>
-Registration (deadline June 9, 2024) and submission of abstracts (deadline June 30, 2024) should be done through this website. 
-The registration fee is &euro; 200. Payment should be done by bank transfer (deadline June 9, 2024). 
-The fee covers conference material, coffee breaks, and the conference dinner.
+Registration and submission of abstracts will open December 1, 2023, and should be done through this website.
+The registration fee is &euro; 200, which includes the conference dinner. Participants who plan to not attend the dinner, 
+should pay a reduced fee of &euro; 130.
 </p>
 Our funding is not yet settled. It might be that we can offer limited support for colleagues who could not attend otherwise.
 <br><br>
-The conference program consists of invited talks (60 min + discussion) and contributed talks (30 min + discussion).
+The conference program consists of invited talks (50 min + discussion) and contributed talks (25 min + discussion).
 <br>
 Confirmed plenary speakers are:
 <p>
@@ -102,7 +102,7 @@ For further information, please check the links on this website.
 If you have special requests which are not answered by the information on this site, please use the conference 
 email address 
 <p>
-<em>ota2024(at)tuwien.ac.at</em>. 
+<em>ota2024</em> (at) <em>tuwien.ac.at</em> 
 </p>
 Looking forward to seeing you in Vienna!
 <br><br>
