--- a/Content/abstract-submission.html
+++ b/Content/abstract-submission.html
@@ -65,14 +65,14 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Abstract submission will be open from December 1, 2023 until June 30, 2024</h3>
+<h3>Abstract submission will be open from December 1, 2023 until June 23, 2024</h3>
 
 <br><br>
 <p> VERSION FOR TESTING </p>
 <br><br>
 
 <h1>Abstract Submission</h1>
-The deadline for submitting the abstract is <span style="color:green">June 30, 2024</span>. 
+The deadline for submitting the abstract is <span style="color:green">June 23, 2024</span>. 
 <br><br>
 To submit your abstract please proceed as follows:
 <ul>
@@ -82,9 +82,10 @@ To submit your abstract please proceed as follows:
 <li>Make sure that your abstract compiles with <span style="color:green">pdflatex</span> without errors.</li>
 <li>Before upload, please rename your file as <span style="color:green">YourName.tex</span>.
 </ul>
-Did you follow the above four steps ? <div class="click">Click here to confirm.</div>
+Did you follow the above four steps ? 
+<div class="click">Click here to confirm, and then click the upload button.</div>
 <div class="showup">
-    <input id="Button" type="button" value="Upload file" style="background-color:#f5f5f5" />
+    <input id="Button" type="button" value="Upload file" style="background-color:#f5f5f5; cursor:pointer;" />
 </div>
 
 <script src="Script/abstract-submission.js"></script>
