--- a/Content/Venue/travel.html
+++ b/Content/Venue/travel.html
@@ -94,15 +94,18 @@ The airport is connected to the city in several ways. We recommend the following
 	For a detailed schedule see the website of the Austrian Federal Railways (OEBB): 
 	<a href="http://www.oebb.at/en/" target=blank_>here</a>.
 	<br>
-	-- Tickets can be bought onboard from the conductor who passes by (sometimes no conductor appears...never mind &#9786;). 
+	-- Tickets can be bought from a counter of the OEBB (after exiting the luggage hall turn right) or online in advance or 
+	onboard the train from the conductor who passes by. 
 	<br>
 	-- At the Main Railway Station you can change to the public transport service (underground, tram, etc.). 
-	Train tickets do not include a possible following journey with underground/tram/etc. 
+	<br>
+	When bought at the counter train tickets can be chosen to include or to not include a possible following journey with 
+	underground/tram/bus. 
 </p>
 <p>
 	Order a taxi in advance. For example from Airport Drivers at 
-	<a href="http://www.airportdriver.at/en" target=blank_>this site</a>. Especially if you travel in a small group or 
-	have more luggage this is a good option. 
+	<a href="http://www.airportdriver.at/en" target=blank_>this site</a> (there are several similar services of this kind). 
+	Especially if you travel in a small group or have more luggage this is a good option. 
 	<br>
 	-- The driver will meet you at the airport right after the exit of the luggage hall. 
 </p>
@@ -112,9 +115,7 @@ Other possibilities are:
 	Trains are running each 30 minutes. 
 	For a detailed schedule see again the website of <a href="http://www.oebb.at/en/" target=blank_>OEBB</a>.
 	<br>
-	-- Costs: Approximately 5 Euro (per person/one way).
-	<br>
-	-- Tickets must be bought in advance and stamped at the platform. 
+	-- Tickets must be bought in advance from a machine and stamped at the platform. 
 	<br>
 	-- At the railway station you can change to the public transport service (underground, tram, etc.). 
 	This following journey with underground/tram/etc is included in the ticket. 
@@ -128,16 +129,16 @@ Other possibilities are:
 	This ticket does not include a possible following journey with underground/tram/etc. 
 </p>
 <p>
-	Train service to the local railway station (<em>Wien Mitte</em>) with the City Airport Train (<em>CAT</em>). 
+	Get a taxi in front of the airport building. This is usually expensive, and it may happen that there is no taxi available. 
+</p>
+<p>
+	Tourist trap: train service to the local railway station (<em>Wien Mitte</em>) with the City Airport Train (<em>CAT</em>). 
 	Trains are running each 30 minutes. 
 	For a detailed schedule see <a href="https://www.cityairporttrain.com/en/home" target=blank_>here</a>.
 	<br>
 	-- Tickets can be bought online or from machines right before or at the platform. 
 	<br>
 	-- At the railway station you can change to the public transport service (underground, tram, etc.). 
-</p>
-<p>
-	Get a taxi in front of the airport building. This is usually expensive, and it may happen that there is no taxi available. 
 </p>
 
 </body>
