--- a/Content/abstract-submission__OPEN.html
+++ b/Content/abstract-submission__OPEN.html
@@ -65,7 +65,24 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Abstract submission will be open from December 1, 2023 until June 23, 2024</h3>
+<h1>Abstract Submission</h1>
+The deadline for submitting the abstract is <span style="color:green">June 23, 2024</span>. 
+<br><br>
+To submit your abstract please proceed as follows:
+<ul>
+<li>Download the LaTeX-template <a href="Downloads/TemplateAbstract.tex" target="_blank">TemplateAbstract.tex</a>
+	and <span style="color:green">use this file</span> to write your abstract.</li>
+<li>Please <span style="color:green">do not</span> insert additional user-defined commands or load additional packages.</li>
+<li>Make sure that your abstract compiles with <span style="color:green">pdflatex</span> without errors.</li>
+<li>Before upload, please rename your file as <span style="color:green">Surname-Firstname.tex</span>.
+</ul>
+Did you follow the above four steps ? 
+<div class="click">Click here to confirm, and then click the upload button to upload your LaTeX-file.</div>
+<div class="showup">
+    <input id="Button" type="button" value="Upload file" style="background-color:#f5f5f5; cursor:pointer;" />
+</div>
+
+<script src="Script/abstract-submission.js"></script>
 
 </body>
 </html>
