--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ The conference program consists of invited talks (50 min + discussion) and contr
 <br>
 Confirmed plenary speakers are:
 <p>
+	Roman Bessonov
+	<br>
 	Sergey Denisov
 	<br>
 	Pavel Exner
