--- a/Content/registration__PRE.html
+++ b/Content/registration__PRE.html
@@ -37,10 +37,10 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration.html">Registration</a>
+	<a href="Content/registration.html" class="current">Registration</a>
 </td>
 <td class="navigation">
-	<a href="Content/abstract-submission.html" class="current">Abstract<br>submission</a>
+	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
@@ -65,24 +65,7 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h1>Abstract Submission</h1>
-The deadline for submitting the abstract is <span style="color:green">June 23, 2024</span>. 
-<br><br>
-To submit your abstract please proceed as follows:
-<ul>
-<li>Download the LaTeX-template <a href="Downloads/TemplateAbstract.tex" target="_blank">TemplateAbstract.tex</a>
-	and <span style="color:green">use this file</span> to write your abstract.</li>
-<li>Please <span style="color:green">do not</span> insert additional user-defined commands or load additional packages.</li>
-<li>Make sure that your abstract compiles with <span style="color:green">pdflatex</span> without errors.</li>
-<li>Before upload, please rename your file as <span style="color:green">Surname-Firstname.tex</span>.
-</ul>
-Did you follow the above four steps ? 
-<div class="click">Click here to confirm, and then click the upload button to upload your LaTeX-file.</div>
-<div class="showup">
-    <input id="Button" type="button" value="Upload file" style="background-color:#f5f5f5; cursor:pointer;" />
-</div>
-
-<script src="Script/abstract-submission.js"></script>
+<h3>Registration will be open from December 1, 2023 until June 2, 2024</h3>
 
 </body>
 </html>
