--- a/Content/downloads.html
+++ b/Content/downloads.html
@@ -66,8 +66,9 @@
 <!---   TEXTBODY   -------------------------->
 
 <ul>
-<li>First announcement: <a href="Downloads/1stAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>LaTeX-template for abstract submission: <a href="Downloads/TemplateAbstract.tex" target="_blank">tex</a></li>
+<li>Second announcement: <a href="Downloads/2ndAnnouncement.pdf" target="_blank">pdf</a></li>
+<li>First announcement: <a href="Downloads/1stAnnouncement.pdf" target="_blank">pdf</a></li>
 </ul>
 
 </body>
