--- a/Content/registration.html
+++ b/Content/registration.html
@@ -72,7 +72,9 @@ To register for the conference, please fill and submit the registration form and
 The conference fee is &euro; 200. This includes conference material, coffee breaks, and the conference dinner. 
 If you plan to not attend the dinner, the fee reduces to &euro; 130. 
 <br><br>
-The conference fee should be paid by bank transfer (domestic and foreign fees charged to payer).
+The conference fee should be paid by bank transfer (domestic and foreign fees charged to payer) after you have received an
+invoice. This invoice carries a number which we kindly ask you to submit as purpose of your transfer (we apologise for this
+complicated procedure which is enforced by our university administration).
 <ul>
 <li>Payee's country:
 	<br>
@@ -104,12 +106,11 @@ The conference fee should be paid by bank transfer (domestic and foreign fees ch
 </li>
 <li> As <i>purpose</i> of your bank transfer, please give:
 	<br>
-	<b>OTA 2024 / "Surname", "First Name"</b>
+	<b>OTA 2024 / "Surname", "Invoice Number"</b>
 	<br>
 	(where you of course substitute your name).
 </li>
 </ul>
-We kindly ask you to make the payment together with the registration.
 
 <h3>Registration form</h3>
 The deadline for registration is <span style="color:green">June 2, 2024</span>. 
