--- a/Content/registration.html
+++ b/Content/registration.html
@@ -69,8 +69,10 @@
 To register for the conference, please fill and submit the registration form and pay the conference fee. 
 
 <h3>Conference fee</h3>
-The conference fee is &euro; 200. This includes conference material, coffee breaks, and the conference dinner. 
-If you plan to not attend the dinner, the fee reduces to &euro; 130. 
+The standard conference fee is &euro; 200 (this includes: welcome coffee, the admission to all scientific sessions, 
+conference packages, room setup and use of audio/visual equipment, evening event in a typical Viennese Restaurant).
+The reduced conference fee is &euro; 130 (this includes: welcome coffee, the admission to all scientific sessions, 
+conference packages, room setup and use of audio/visual equipment).
 <br><br>
 The conference fee should be paid by bank transfer (domestic and foreign fees charged to payer) after you have received an
 invoice. This invoice carries a number which we kindly ask you to submit as purpose of your transfer (we apologise for this
