--- a/Content/Scientific/participants.html
+++ b/Content/Scientific/participants.html
@@ -37,7 +37,7 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration.html">Registration</a>
+	<a href="Content/registration__POST.html">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
