--- a/Content/abstract-submission__POST.html
+++ b/Content/abstract-submission__POST.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-<base href=".">
+<base href="..">
 <title>Operator Theory and Approximation 2024</title>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/main.css"/>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/navigation.css"/>
@@ -21,7 +21,7 @@
 <table class="navigation">
 <tr>
 <td class="navigation">
-	<a href="index.html" class="current">Home</a>
+	<a href="index.html">Home</a>
 </td>
 <td class="navigation">
 	<a href="Content/keydates.html">Key<br>Dates</a>
@@ -40,7 +40,7 @@
 	<a href="Content/registration__POST.html">Registration</a>
 </td>
 <td class="navigation">
-	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
+	<a href="Content/abstract-submission.html" class="current">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
@@ -65,63 +65,7 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Welcome !</h3>
-
-This conference aims to bring together mathematicians working on spectral theory, complex analysis, approximation theory and 
-related areas, and provide a framework for scientific exchange.
-<p>
-Registration and submission of abstracts will open December 1, 2023, and should be done through this website.
-The registration fee is &euro; 200, which includes the conference dinner. Participants who plan to not attend the dinner, 
-should pay a reduced fee of &euro; 130.
-</p>
-Our funding is not yet settled. It might be that we can offer limited support for colleagues who could not attend otherwise.
-<br><br>
-The conference program consists of invited talks (50 min + discussion) and contributed talks (25 min + discussion).
-<br>
-Confirmed plenary speakers are:
-<p>
-	Roman Bessonov
-	<br>
-	Sergey Denisov
-	<br>
-	Pavel Exner
-	<br>
-	Arno Kuijlaars
-	<br>
-	Matthias Langer
-	<br>
-	Milivoje Lukic
-	<br>
-	Marius Lemm
-	<br>
-	Mikhail Sodin
-	<br>
-	Christiane Tretter
-	<br>
-	Peter Yuditskii
-</p>
-For further information, please check the links on this website. 
-If you have special requests which are not answered by the information on this site, please use the conference 
-email address 
-<p>
-<em>ota2024</em> (at) <em>tuwien.ac.at</em> 
-</p>
-Looking forward to seeing you in Vienna!
-<br><br>
-With best regards, the organisers
-<br><br>
-Benjamin Eichinger
-<br>
-Harald Woracek
-
-
-<!---   PAGE FOOT   --------------------------->
-
-<footer>
-	<a href="http://arxiv.org/abs/1204.5141" target=_blank">
-	<img style="width: 36px; height: 40px;" alt="" src="Images/Tux.png">
-	</a>
-</footer>
+<h3>Abstract submission is closed</h3>
 
 </body>
 </html>
