--- a/Content/downloads.html
+++ b/Content/downloads.html
@@ -37,7 +37,7 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration.html">Registration</a>
+	<a href="Content/registration__POST.html">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
@@ -67,6 +67,7 @@
 
 <ul>
 <li>LaTeX-template for abstract submission: <a href="Downloads/TemplateAbstract.tex" target="_blank">tex</a></li>
+<li>Third announcement: <a href="Downloads/3rdAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>Second announcement: <a href="Downloads/2ndAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>First announcement: <a href="Downloads/1stAnnouncement.pdf" target="_blank">pdf</a></li>
 </ul>
