--- a/Content/Venue/conference-dinner.html
+++ b/Content/Venue/conference-dinner.html
@@ -37,7 +37,7 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration__POST.html">Registration</a>
+	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
@@ -65,7 +65,20 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>This site is not yet available</h3>
+<h1>Conference Dinner</h1>
+The Conference Dinner takes place <em>Tuesday 9.7.2024, 19'00</em> in the <em>Wieden Br&auml;u</em>. 
+This restaurant is located in walking distance (<10 Minutes) from the university (Waaggasse 5; see 
+<a href="./Downloads/WiedenBraeu.png" target="_blank">this map</a>).
+<br>
+<br>
+Participants who attend the dinner can either get their on their own, or walk together with us. 
+We will leave at 18'45 from the university. Meeting point for those who want to join is in front of the lecture halls 
+(2nd floor/yellow area/ HS 2,3).
+<br>
+<br>
+At the restaurant there will be a small menue from which you can choose. 
+<br>
+<br>
 
 </body>
 </html>
