--- a/Content/Venue/directions.html
+++ b/Content/Venue/directions.html
@@ -37,7 +37,7 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration__POST.html">Registration</a>
+	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
@@ -65,7 +65,73 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>This site is not yet available</h3>
+<h1>The Vienna University of Technology</h1>
+<ol>
+<li>
+	The conference takes place in the <em>Freihaus building</em> of the TU Wien. On the below map that building is named 
+	<em>Campus Freihaus</em> and marked with <em>D</em>.
+	The address is <em>Wiedner Hauptstrasse 8-10, Vienna 1040</em>. 
+	<ul>
+	<li><a href="./Downloads/TU-Lageplan.pdf" target="_blank">Map</a> of all TU Wien buildings.</li>
+	</ul>
+</li>
+<br>
+<li>
+	The Freihaus building itself is structured into three vertical areas: 
+	<em>red</em>, <em>yellow</em>, and <em>green</em>. 
+	<br>
+	Upon entering you find yourself in the red area. 
+	<br>
+	<br>
+	In each area there are elevators, a big open staircase, and several (rather hidden) small staircases. 
+	The open staircases lead from the ground floor up to the 2nd floor only (ground floor = floor 0). 
+	Elevators and small staircases lead further up. 
+	The different areas are connected; you can pass from one to another on each floor. 
+</li>
+<br>
+<li>
+	The lecture halls used for the talks of the conference are located in the <em>yellow area</em> on the <em>2nd floor</em>. 
+	They are:
+	<ul>
+	<li>FH HS 3 (stands for Freihaus H&ouml;rsaal 3)</li>
+	<li>FH HS 2 (stands for Freihaus H&ouml;rsaal 2)</li>
+	</ul>
+	These rooms are equipped with (very good) blackboards and a projector+computer but no windows. 
+	<br>
+	<br>
+	Further we use the following rooms which are located in the <em>green area</em> on the <em>3rd floor</em>. 
+	<ul>
+	<li>Sem.R. green 03 A (stands for Seminarraum 03 A in the green area). 
+		<br>
+		This is the room for coffee breaks, and can also be used for discussions and work.</li>
+	<li>Sem.R. green 03 C. An additional place for discussions and work.</li>
+	</ul>
+	These rooms will always be open to ensure constant supply with coffee, chalk and blackboard.
+	<br>
+	<br>
+	Here are maps of different floors indicating relevant places.
+	<ul>
+	<li> <a href="./Downloads/2nd-floor.jpg" target="_blank">2nd floor</a></li>
+	<li> <a href="./Downloads/3rd-floor.jpg" target="_blank">3rd floor</a></li>
+	</ul>
+</li>
+<br>
+<li>
+	Registration takes place on Monday from 9'00 to 9'40 and during the first coffee break (11'00-11'45) 
+	in front of the coffee room. 
+	<br>
+	To get there after entering the Freihaus building proceed as follows: move through 
+	the red and yellow areas into the green area, there take an elevator to the 3rd floor. When you exit the elevator 
+	registration is right in front of you. 
+	<br>
+	<br>
+	Participants who arrive after Monday noon, 
+	are asked to personally contact one of the organisers who will then take care of the registration. 
+</li>
+<br>
+</ol>
+<br>
+<br>
 
 </body>
 </html>
