--- a/Content/registration.html
+++ b/Content/registration.html
@@ -37,7 +37,7 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration__POST.html" class="current">Registration</a>
+	<a href="Content/registration.html" class="current">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
@@ -65,95 +65,9 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h1>Registration</h1>
-To register for the conference, please fill and submit the registration form and pay the conference fee. 
-
-<h3>Conference fee</h3>
-The standard conference fee is &euro; 200 (this includes: welcome coffee, the admission to all scientific sessions, 
-conference packages, room setup and use of audio/visual equipment, evening event in a typical Viennese Restaurant).
-The reduced conference fee is &euro; 130 (this includes: welcome coffee, the admission to all scientific sessions, 
-conference packages, room setup and use of audio/visual equipment).
-<br><br>
-The conference fee should be paid by bank transfer (domestic and foreign fees charged to payer) after you have received an
-invoice. This invoice carries a number which we kindly ask you to submit as purpose of your transfer (we apologise for this
-complicated procedure which is enforced by our university administration).
-<ul>
-<li>Payee's country:
-	<br>
-	<b>Austria</b>
-</li>
-<li>Currency:
-	<br>
-	<b>Euro</b>
-</li>
-<li>Account number (IBAN):
-	<br>
-	<b>AT81 3200 0003 0061 1228</b>
-</li>
-<li>Bank code (BIC/SWIFT):
-	<br>
-	<b>RLNWATWW</b>
-</li>
-<li>Name and adress of payee's bank:
-	<br>
-	<b>Raiffeisenlandesbank Niederösterreich-Wien AG</b>
-	<br>
-	<b>Friedrich-Wilhelm-Raiffeisenplatz 1</b>
-	<br>
-	<b>1020 Vienna, AUSTRIA</b>
-</li>
-<li>Payee's name:
-	<br>
-	<b>Technische Universität Wien/Konf.+Tagungen</b>
-</li>
-<li> As <i>purpose</i> of your bank transfer, please give:
-	<br>
-	<b>OTA 2024 / "Surname", "Invoice Number"</b>
-	<br>
-	(where you of course substitute your name).
-</li>
-</ul>
-
-<h3>Registration form</h3>
-The deadline for registration is <span style="color:green">June 2, 2024</span>. 
-<br><br>
-Guess what: in the registration form linked below your personal data is collected for the purposes of processing your
-registration and for organisational matters of the conference. By filling and submitting the form you agree with that.
-
-<p>
-Click 
-<a href="https://docs.google.com/forms/d/1tzBqvNIr7FCyvo23vZUR2OAj_CqaXlTblZU9tj3dfiI/edit" target="_blank">here</a>
-to agree and proceed to the form.
-</p>
-
-<h3>Visa requests</h3>
-If you require an official invitation for obtaining a visa, please contact us via the conference email address. 
-Invitations are sent out only after payment of the conference fee.
-
-<!--
-<form action="https://docs.google.com/forms/d/e/1FAIpQLSer7vcPBAP1jPfeGOrGz0sdTMBcC_Volxhnoxx18p7BJBWKMg/formResponse" method="post">
-	<label style="padding-right:20px">Last Name:</label>
-	<input type="text" placeholder="______" name="entry.1279201448" style="background-color:#e3e3e3" required>
-	<br><br>
-	<label style="padding-right:20px">First Name:</label>
-	<input type="text" placeholder="______" name="entry.1986506563" style="background-color:#e3e3e3" required>
-	<br><br>
-	<label style="padding-right:20px">Affiliation:</label>
-	<input type="text" placeholder="______" name="entry.1589467449" style="background-color:#e3e3e3" required>
-	<br><br>
-	<label style="padding-right:20px">Email Address:</label>
-	<input type="email" placeholder="______" name="emailAddress" style="background-color:#e3e3e3" required>
-	<br><br>
-	<label style="padding-right:20px">Do you intend to give a talk?</label>
-	<input type="radio" name="" > Yes</input>
-	<input type="radio" name="" > No</input>
-	<br><br>
-	<label style="color:#b8860b; padding-right:20px">Please review your data and check box to confirm:</label>
-	<input type="checkbox" name="" style="background-color:#e3e3e3">
-	<br><br>
-	<button type="submit" style="background-color:#f5f5f5"><b>Submit</b></button>
-</form>
--->
+<h3>Registration is closed</h3>
+<br>
+If you did not manage to register in time but still want to attend the conference, contact us via the conference email adress.
 
 </body>
 </html>
