--- a/Content/Venue/conference-dinner.html
+++ b/Content/Venue/conference-dinner.html
@@ -49,7 +49,7 @@
 	<a href="Content/Venue/travel.html">Travel</a>
 	<a href="Content/Venue/accommodation.html">Accomodation</a>
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
-	<a href="Content/Venue/directions.html">Direction at the TU Wien</a>
+	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
